sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:5: error: not found: value échangé
échangé = true
^AlgCocktailSort2:7: error: not found: value échangé
while ( échangé == true) {
        ^AlgCocktailSort2:8: error: not found: value échangé
	échangé = false
        ^AlgCocktailSort2:12: error: not found: value échangé
			échangé = true
                        ^AlgCocktailSort2:19: error: not found: value échangé
			échangé = true
                        ^